# gd32f527-demo-suites-cmake

./: README.md
Drivers/BSP/GD32F527I_EVAL/: gd32f527i_eval.c  gd32f527i_eval.h
Drivers/BSP/GD32F527R_START/: gd32f527r_start.c  gd32f527r_start.h
Drivers/BSP/GD32F527V_START/: gd32f527v_start.c  gd32f527v_start.h
Drivers/BSP/GD32F527Z_START/: gd32f527z_start.c  gd32f527z_start.h
Projects/GD32F527I_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32F527I_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/04_USART_Printf/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32F527I_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32F527I_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32F527I_EVAL/08_ADC0_ADC1_Follow_up_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/09_ADC0_ADC1_Regular_Parallel_mode/Application/: readme.txt
Projects/GD32F527I_EVAL/10_DAC_Output_Voltage_Value/Application/: readme.txt
Projects/GD32F527I_EVAL/11_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/12_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/13_SPI_Quad_Flash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/14_EXMC_SDRAM/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/15_EXMC_SDRAM_DeepSleep/Application/: readme.txt
Projects/GD32F527I_EVAL/16_EXMC_NandFlash/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/17_SDIO_SDCardTest/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/18_CAN_Network/Application/: readme.txt
Projects/GD32F527I_EVAL/19_RCU_Clock_Out/Application/: readme.txt
Projects/GD32F527I_EVAL/20_CTC_Calibration/Application/: readme.txt
Projects/GD32F527I_EVAL/21_PMU_Sleep_Wakeup/Application/: readme.txt
Projects/GD32F527I_EVAL/22_RTC_Calendar/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/23_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32F527I_EVAL/24_TLI_IPA/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/25_DCI_OV2640/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/26_CAU/Application/: readme.txt
Projects/GD32F527I_EVAL/27_HAU/Application/: readme.txt
Projects/GD32F527I_EVAL/27_HAU/cmake/: project.cmake
Projects/GD32F527I_EVAL/28_PKCAU_Modular_Addition_Interrupt/Application/: readme.txt
Projects/GD32F527I_EVAL/29_TRNG_Get_Random/Application/: readme.txt
Projects/GD32F527I_EVAL/30_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32F527I_EVAL/30_ENET_FreeRTOS_tcpudp/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/30_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32F527I_EVAL/30_ENET_Raw_tcpudp/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/30_ENET_Raw_webserver/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/31_USB_Device_HID_Keyboard/: CMakeLists.txt
Projects/GD32F527I_EVAL/31_USB_Device_HID_Keyboard/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/31_USB_Device_MSC_Udisk/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/32_USB_Host_HID_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/32_USB_Host_HID_Host/Drivers/GD32F5xx_usb_library/: CMakeLists.txt
Projects/GD32F527I_EVAL/32_USB_Host_HID_Host/cmake/: project.cmake
Projects/GD32F527I_EVAL/32_USB_Host_MSC_Host/: CMakeLists.txt
Projects/GD32F527I_EVAL/32_USB_Host_MSC_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32F527I_EVAL/32_USB_Host_MSC_Host/Middlewares/FatFs/: CMakeLists.txt
Projects/GD32F527I_EVAL/32_USB_Host_MSC_Host/cmake/: project.cmake
Projects/GD32F527R_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32F527R_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527R_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F527V_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527V_START/07_USB_MSC_Host/: CMakeLists.txt
Projects/GD32F527Z_START/02_GPIO_Key_Polling_mode/: gd32f5xx_flash.ld
Projects/GD32F527Z_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32F527Z_START/07_USB_MSC_Host/: CMakeLists.txt
(+253 files in other folders)
